@@ -322,3 +322,4 @@ suggestions:
   Kai HTML
   Marc Richter
   rjc
+  php-coder
